resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;


body > div.dark {
    .trix-button-row {
        .trix-button-group {
            border-color: #0f172a;

            .trix-button {
                background-color: white;
                border-color: #0f172a;

                &.trix-active {
                    background-color: lighten(#94a3b8, 10%);
                }
            }
        }
    }

    .trix-content {
        background-color: #0f172a;
        border-color: #344155;
    }
}

